no coffee, just js. bin file package

--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
   "name": "tslint-fix",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "tslint-fix takes output of tslint and fixes the errors.",
-  "main": "src/tslint-fix.js",
+  "main": "lib/tslint-fix.js",
+  "bin" : { "tslint-fix" : "./lib/tslint-fix.js" },
   "files": [
-    "src"
+    "lib"
   ],
   "scripts": {
-    "test": "istanbul cover node_modules/.bin/_mocha -- -R spec test/*.test.js",
-    "test-debug": "mocha --debug-brk -R spec test/*.test.js",
-    "coveralls": "cat coverage/lcov.info | node_modules/.bin/coveralls"
   },
   "repository": {
     "type": "git",
@@ -29,9 +27,5 @@
   },
   "homepage": "https://github.com/nojvek/tslint-fix#readme",
   "devDependencies": {
-    "chai": "^3.5.0",
-    "coveralls": "^2.11.11",
-    "mocha": "^2.5.3",
-    "sinon": "^1.17.4"
   }
 }
